Opened 11 years ago

Closed 10 years ago

#10781 closed bug (fixed)

[Debugger] crashed in MemoryView::_GetPointForOffset

Reported by: diver Owned by: anevilyak
Priority: normal Milestone: R1
Component: Applications/Debugger Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by diver)

This is hrev47167 in VirtualBox.

Debugger crashed when I clicked Inspect menuitem in Variables tab. Before the crash there was the following alert above Inspector window: "Unable to read address 0x0:Invalid Argument"

Attachments (2)

Debugger-30203-debug-25-04-2014-13-40-50.report (19.4 KB ) - added by diver 11 years ago.
Debugger-31000-debug-25-04-2014-13-48-46.report (15.4 KB ) - added by diver 11 years ago.

Download all attachments as: .zip

Change History (6)

comment:1 by diver, 11 years ago

Description: modified (diff)

comment:2 by diver, 11 years ago

I tried to repro it, but got a different crash with the same steps.

comment:3 by anevilyak, 11 years ago

The second crash has been fixed in hrev47169. Leaving ticket open since the first one is as yet unresolved.

Last edited 11 years ago by anevilyak (previous) (diff)

comment:4 by anevilyak, 10 years ago

Resolution: fixed
Status: newclosed

First crash should be fixed as of hrev47227.

Note: See TracTickets for help on using tickets.